fix form on mobile

--- a/src/modules/multi-step-form/multi-step-form.module.sass
+++ b/src/modules/multi-step-form/multi-step-form.module.sass
@@ -51,6 +51,7 @@
         background: var(--color-white)
         position: absolute
         top: 100px
+        width: calc( 100% - 48px )
         left: 24px
         right: 24px
         padding: 16px 24px
